@@ -49,6 +49,7 @@ Technically, it is possible to have more than one gallery administrator, but it 
 <p>Bulletin Board Code (also known as &quot;<a href="bbcode.htm">BBCODE</a>&quot;) can be used to add links, email addresses and some basic formats to text fields like description fields.</p>
 <p>Your Coppermine gallery is capable to extract picture meta data and store them in the database. You can manage the meta data in EXIF format using the <a href="exif.htm#exif_manager">EXIF manager</a>.</p>
 <p>Additional functionaltity that is not needed for all galleries but helpful for many can be added using <a href="plugins.htm">plugins</a>.</p>
+<p>Coppermine can apply <a href="watermarking.htm#watermark">watermarking</a> to uploaded images to minimize content theft.</p>
 
 
 <script type="text/javascript">
