@@ -1033,6 +1033,7 @@ OpenOffice 1.x / StarOffice 6.x: sxw/stw/sxc/stc/sxd/std/sxi/sti/sxg/sxm</p>
 
 <a name="admin_watermarking"></a><h2>Image watermarking<a href="#admin_watermarking" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h2>
 <p>Starting with cpg1.5.x Coppermine comes with support for permanently watermarking pictures with the possibility to undo the watermarking. Use watermarking to protect your images against theft.</p>
+<p>Details on <a href="watermarking.htm#watermark">watermarking</a> can be found on the corresponding article in the docs.</p>
 <hr />
 <a name="admin_watermarking_enable"></a><h3>Watermark Image<a href="#admin_watermarking_enable" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
 <p>General toggle that determines if watermarking should be enabled or disabled. By default, it is disabled.</p>
