@@ -348,6 +348,7 @@
       <li><a href="admin-tools.htm#admin_tools">Admin Tools</a></li>
       <li><a href="errors.htm#errors">Errors</a></li>
       <li><a href="export.htm#export">Exporting</a></li>
+	  <li><a href="watermarking.htm#watermark">Watermarking</a></li>
     </ul>
   </li>
   <li><a href="uploading.htm">Uploading</a>
