@@ -1,0 +1,77 @@
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
+<head>
+<title>Watermarking - Coppermine Photo Gallery - Documentation &amp; Manual</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="language" content="en" />
+<meta name="copyright" content="Coppermine dev team" />
+<meta name="description" content="" />
+<meta http-equiv="Content-Style-Type" content="text/css" />
+<meta name="MSSmartTagsPreventParsing" content="true" />
+<meta http-equiv="imagetoolbar" content="no" />
+<!--
+  SVN version info:
+
+  Coppermine version: 1.5.1
+  $Revision: 5585 $
+  $LastChangedBy: gaugau $
+  $Date: 2009-01-06 09:11:46 +0100 (Di, 06 Jan 2009) $
+-->
+<link rel="stylesheet" type="text/css" href="../style/style.css" media="all" />
+<link rel="stylesheet" type="text/css" href="../style/screen.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="../style/print.css" media="print" />
+<link rel="shortcut icon" href="../favicon.ico" />
+<script src="../js/jquery.js" type="text/javascript"></script>
+<script src="../js/jquery.treeview.js" type="text/javascript"></script>
+<script src="script.js" type="text/javascript"></script>
+</head>
+<body>
+<script type="text/javascript">
+  cpgDocHeader();
+</script>
+<div id="toc">
+<script type="text/javascript">
+  cpgDocToc();
+</script>
+<noscript>
+<a href="toc.htm">Table of Contents</a>
+</noscript>
+</div>
+
+<a name="watermark"></a><h1>Watermarking<a href="#watermark" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h1>
+<p>Watermarking is a config option in Coppermine that can be enabled if needed. By default, watermarking is turned off. The settings can be found in 
+<a href="configuration.htm#admin_watermarking">Configuration &rarr; Image watermarking</a>.</p>
+<p>Watermarking works both with with ImageMagick and GD2. The <a href="configuration.htm#admin_watermarking_enable">watermark image</a> should be a .png file. You can make it's background transparent. You'll have to enter the absolute or relative path to the watermark image in config. Preset is a sample watermark in coppermines images directory. So you should see this sample when enabling the watermark function and upload a test image.</p>
+<p>The <a href="configuration.htm#admin_watermarking_transparency">transparency settings</a> in config will make the entire watermark transparent to the image background (ImageMagick only).</p>
+<p>There's a new nifty feature. Automatically downsizing of the watermark image when the uploaded picture is smaller than the width you set (<a href="configuration.htm#admin_watermarking_downsize">Downsize watermark if width of an picture is smaller than entered value</a>). That is the 100% reference point. Resizing of the watermark is linear (0 to disable)).</p>
+<p class="cpg_example">If you e.g. enter here 1024 (like Stramm, the creator of the Watermarking features, did on the <a href="http://stramm.st.funpic.org/displayimage.php?pos=-96" rel="external" class="external">demo site</a> of his modpack for cpg1.4.x where the watermarking was introduced first), then the 100% reference is at images with a width of 1024px or bigger. If you upload pics > 1024px the watermark image won't get resized and attached with its full size. If you let coppermine create an intermediate image with a width of 400 pics, then the watermark will get downsized to 39% of it's original size. Is the fullsized e.g. 512px, then the watermark will have 50% of it's orig size. Of course this sucks some CPU. And it's working excellent together with  <a href="configuration.htm#admin_picture_thumbnail_auto-resize">Auto resize images that are larger than max width or height</a> (set it to the same as you used for the 100% reference... in the example 1024). This way the watermark will always fit perfectly onto your images.</p>
+<p>To undo a watermark turn off watermarking by setting <a href="configuration.htm#admin_watermarking_enable">Watermark Image</a> to "no" and use the <a href="admin-tools.htm#admin_tools">admin tools</a> to re-create your files.</p>
+<p>If you use GD2, then the transparency setting in config has no function. If you want the watermark to be transparent against the background, then reduce layer transparency of your watermark image in your paint proggy to e.g. 50 (has been done for the sample watermark)...</p>
+
+<a name="watermark_alternatives"></a><h2>Alternatives<a href="#watermark_alternatives" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h2>
+<p>In an ideal world, everyone would respect the intelectual properties of others and not steal images from others. But the world is not ideal, and the way the www browsers work (you don't actually view internet "sites on the fly", but your browser downloads everything before displaying it to you) of course makes it easy for others to steal your pics. That's one of the reasons why watermarking has been invented: you can tag your images with a watermark that allows others to see your images, but those who steal them will have to live with the watermark and therefor can hardly claim that they own the images.</p>
+<p>There is a thin line though between making sure that your intelectual properties are respected and nagging your legitimate site visitors: if a watermark is at near the border of an image, a thief might get away with just cropping your image. If the watermark is to big or to much "in the way", the watermark will distract too much and your visitors will leave.</p>
+<p>That's why users have requested other means of protection against content thiefs - here are just some of the mechanisms:</p>
+<ul>
+	<li><a name="watermark_alternatives_no_right_click"></a><h3>Turning the context menu off<a href="#" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+	That's the most stupid and simple thing that can only stop absolute newbies from stealing your images. However, it will scare away many legitimate visitors of your site. Silly no-right-click scripts simply are not an option - take our word on that. If you don't believe us and are determined to use them, go ahead and google for them - they are available for free in abundance, and none of them works flawlessly.</li>
+	<li><a name="watermark_alternatives_registered_only"></a><h3>Only display your precious content to legitimate viewers<a href="#watermark_alternatives_registered_only" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+	Simply disallow guests to view your gallery, or only allow them to see low resolution images (thumbnails). You will of course lose visitors, so this is only an option if you have absolute quality content.</li>
+	<li><a name="watermark_alternatives_overlay"></a><h3>Display on overlay<a href="#watermark_alternatives_overlay" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+	This little trick can fool many image thieves (newbies mostly): you just display a transparent image in front of your actual content - if the "thief" performs a right-click, save image, he'll just save the useless transparent overlay. Coppermine comes with that option: enable <a href="configuration.htm#admin_image_transparent_overlay_start">Insert a transparent overlay to minimize image theft</a> in config.</li>
+</ul>
+
+<a name="watermark_client_sided"></a><h2>Client-sided watermarking<a href="#watermark_client_sided" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h2>
+<p>Watermarking on the server is a resources-intensive process that can bring down your server or bring you in troubles with your webhost because they are concerned about the resources usage. Additionally, a user who knows his way around in coppermine can figure out the path to the full-sized original image that is not watermarked and get that.</p>
+<p>The only thing that will permanently ifx this is client-sided watermarking. In other words: apply a permanent watermark to your images on your client before even uploading them to your server. Keep the unmarked originals only on your client and not on your webserver.</p>
+<p>There are many tools that can be used to apply a watermark to your files on your client, and some even can accomplish this in batches, e.g. the free tool <a href="http://www.picture-shark.com/" rel="external" class="external">Picture Shark</a>.</p>
+
+<br clear="all" />
+<a name="exif_end"></a>
+<script type="text/javascript">
+  cpgDocFooter();
+  dateRevision(' $LastChangedDate: 2009-01-06 09:11:46 +0100 (Di, 06 Jan 2009) $ ', ' $Revision: 5585 $ ');
+</script>
+
+</body>
+</html>
